--- a/app/src/main/res/layout/set_username_fragment.xml
+++ b/app/src/main/res/layout/set_username_fragment.xml
@@ -45,4 +45,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_up" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:id="@+id/noteText"/>
+
 </LinearLayout>
