--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -3,26 +3,123 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_activity_nav_graph"
-    app:startDestination="@id/chatListFragment">
+    app:startDestination="@id/splashScreen">
 
     <fragment
         android:id="@+id/chatListFragment"
         android:name="com.abhishekjagushte.engage.ui.main.fragments.chatlist.ChatListFragment"
         android:label="chat_list_fragment"
-        tools:layout="@layout/chat_list_fragment" />
+        tools:layout="@layout/fragment_chat_list" />
     <fragment
         android:id="@+id/eventsFragment"
         android:name="com.abhishekjagushte.engage.ui.main.fragments.events.EventsFragment"
         android:label="events_fragment"
-        tools:layout="@layout/events_fragment" />
+        tools:layout="@layout/fragment_events" />
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.abhishekjagushte.engage.ui.main.fragments.search.SearchFragment"
         android:label="search_fragment"
-        tools:layout="@layout/search_fragment" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_profileActivity"
+            app:destination="@id/profileFragment" />
+    </fragment>
     <fragment
         android:id="@+id/peopleFragment"
         android:name="com.abhishekjagushte.engage.ui.main.fragments.people.PeopleFragment"
         android:label="people_fragment"
-        tools:layout="@layout/people_fragment" />
+        tools:layout="@layout/fragment_people" >
+        <action
+            android:id="@+id/action_peopleFragment_to_testFragment"
+            app:destination="@id/testFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.abhishekjagushte.engage.ui.main.fragments.profile.ProfileFragment"
+        android:label="activity_profile"
+        tools:layout="@layout/fragment_profile" >
+        <argument
+            android:name="name"
+            app:argType="string" />
+        <argument
+            android:name="username"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_profileActivity_to_chatFragment"
+            app:destination="@id/chatFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/testFragment"
+        android:name="com.abhishekjagushte.engage.ui.main.fragments.test.TestFragment"
+        android:label="fragment_test"
+        tools:layout="@layout/fragment_test" />
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="com.abhishekjagushte.engage.ui.chat.fragments.chat.ChatFragment"
+        android:label="fragment_chat"
+        tools:layout="@layout/fragment_chat" />
+
+    <fragment
+        android:id="@+id/splashScreen"
+        android:name="com.abhishekjagushte.engage.ui.SplashScreenFragment"
+        android:label="SplashScreen"
+        tools:layout="@layout/fragment_splash_screen">
+        <action
+            android:id="@+id/action_splashScreen_to_chatListFragment"
+            app:destination="@id/chatListFragment" />
+        <action
+            android:id="@+id/action_splashScreen_to_setup_activity_nav_graph"
+            app:destination="@id/setup_activity_nav_graph" />
+    </fragment>
+
+
+    <navigation
+        android:id="@+id/setup_activity_nav_graph"
+        app:startDestination="@id/chooseMethodFragment">
+
+        <fragment
+            android:id="@+id/chooseMethodFragment"
+            android:name="com.abhishekjagushte.engage.ui.setup.fragments.ChooseMethodFragment"
+            android:label="choose_method_fragment"
+            tools:layout="@layout/fragment_choose_method" >
+            <action
+                android:id="@+id/action_chooseMethodFragment_to_loginFragment"
+                app:destination="@id/loginFragment" />
+            <action
+                android:id="@+id/action_chooseMethodFragment_to_signUpFragment"
+                app:destination="@id/signUpFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/loginFragment"
+            android:name="com.abhishekjagushte.engage.ui.setup.fragments.login.LoginFragment"
+            android:label="login_fragment"
+            tools:layout="@layout/fragment_login" />
+        <fragment
+            android:id="@+id/signUpFragment"
+            android:name="com.abhishekjagushte.engage.ui.setup.fragments.signup.SignUpFragment"
+            android:label="sign_up_fragment"
+            tools:layout="@layout/fragment_sign_up" >
+            <action
+                android:id="@+id/action_signUpFragment_to_setUsernameFragment"
+                app:destination="@id/setUsernameFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/setUsernameFragment"
+            android:name="com.abhishekjagushte.engage.ui.setup.fragments.setusername.SetUsernameFragment"
+            android:label="set_username_fragment"
+            tools:layout="@layout/fragment_set_username" >
+            <argument
+                android:name="email"
+                app:argType="string" />
+            <argument
+                android:name="password"
+                app:argType="string" />
+        </fragment>
+
+        <action
+            android:id="@+id/action_global_chatListFragment"
+            app:destination="@id/chatListFragment" />
+
+    </navigation>
+
 </navigation>
