--- a/app/src/main/res/layout/text_message_container_left.xml
+++ b/app/src/main/res/layout/text_message_container_left.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+<!--    Changed tempeorily from messageView to message-->
+
     <data>
         <variable
             name="message"
-            type="com.abhishekjagushte.engage.database.MessageView" />
+            type="com.abhishekjagushte.engage.database.Message" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -31,7 +33,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
-                android:text="Abhishek Jagushte"
+                app:setSenderName="@{message}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
