Chat Adapter Implemented and MessageView Implemented

--- a/app/src/main/res/layout/text_message_container_left.xml
+++ b/app/src/main/res/layout/text_message_container_left.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="4dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="#A7ACAB"
             android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
