--- a/app/src/main/res/layout/text_message_container_right.xml
+++ b/app/src/main/res/layout/text_message_container_right.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="message"
-            type="com.abhishekjagushte.engage.database.Message" />
+            type="com.abhishekjagushte.engage.database.MessageView" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginStart="30dp"
             android:layout_marginBottom="4dp"
             android:background="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -33,12 +36,12 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
-                app:setTimeString="@{message}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/message_tv" />
+                app:layout_constraintTop_toBottomOf="@+id/message_tv"
+                app:setTimeString="@{message}" />
 
             <TextView
                 android:id="@+id/message_tv"
