Changed to the proposed new chat system for 121 messages

--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -70,13 +70,8 @@
         android:label="fragment_chat"
         tools:layout="@layout/fragment_chat" >
         <argument
-            android:name="username"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
             android:name="conversationID"
-            app:argType="string"
-            app:nullable="true" />
+            app:argType="string" />
     </fragment>
 
     <fragment
