--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_chatListFragment_to_chatFragment"
             app:destination="@id/chatFragment" />
+        <action
+            android:id="@+id/action_chatListFragment_to_addParticipantsFragment"
+            app:destination="@id/addParticipantsFragment" />
     </fragment>
     <fragment
         android:id="@+id/eventsFragment"
@@ -143,5 +146,10 @@
             app:enterAnim="@anim/slide_in_right" />
 
     </navigation>
+    <fragment
+        android:id="@+id/addParticipantsFragment"
+        android:name="com.abhishekjagushte.engage.ui.main.screens.addparticipants.AddParticipantsFragment"
+        android:label="@string/add_participants"
+        tools:layout="@layout/fragment_add_participants" />
 
 </navigation>
