--- a/app/src/main/res/layout/text_message_container_left.xml
+++ b/app/src/main/res/layout/text_message_container_left.xml
@@ -37,6 +37,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:setSenderName="@{message}" />
