Fixed navigation bug after creating group

--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -164,7 +164,8 @@
         </fragment>
         <action
             android:id="@+id/action_global_chatFragment"
-            app:destination="@id/chatFragment" />
+            app:destination="@id/chatFragment"
+            app:popUpTo="@id/chatListFragment" />
     </navigation>
 
 </navigation>
