The DomainEntities.kt file deleted and segregated across views and entities properly, fixed a bug related to first time notification in 121 chat

--- a/app/src/main/res/layout/text_message121_container_left.xml
+++ b/app/src/main/res/layout/text_message121_container_left.xml
@@ -8,7 +8,7 @@
     <data>
         <variable
             name="message"
-            type="com.abhishekjagushte.engage.database.MessageView" />
+            type="com.abhishekjagushte.engage.database.views.MessageView" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
