--- a/app/src/main/res/layout/text_message_container_right.xml
+++ b/app/src/main/res/layout/text_message_container_right.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="message"
-            type="com.abhishekjagushte.engage.database.MessageView" />
+            type="com.abhishekjagushte.engage.database.views.MessageView" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
