--- a/app/src/main/res/layout/item_contact_list.xml
+++ b/app/src/main/res/layout/item_contact_list.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="contact"
-            type="com.abhishekjagushte.engage.database.Contact" />
+            type="com.abhishekjagushte.engage.database.entities.Contact" />
 
     </data>
 
