--- a/app/src/main/res/layout/image_message_container_left.xml
+++ b/app/src/main/res/layout/image_message_container_left.xml
@@ -40,6 +40,7 @@
                 android:maxWidth="300dp"
                 android:maxHeight="300dp"
                 android:scaleType="fitCenter"
+                android:src="@mipmap/ic_launcher"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -63,10 +64,22 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/image_msg_iv"
                 app:layout_constraintEnd_toEndOf="@+id/image_msg_iv"
                 app:layout_constraintStart_toStartOf="@+id/image_msg_iv"
                 app:layout_constraintTop_toTopOf="@+id/image_msg_iv" />
+
+            <ImageButton
+                android:id="@+id/downloadButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                app:layout_constraintBottom_toBottomOf="@+id/image_msg_iv"
+                app:layout_constraintEnd_toEndOf="@+id/image_msg_iv"
+                app:layout_constraintStart_toStartOf="@+id/image_msg_iv"
+                app:layout_constraintTop_toTopOf="@+id/image_msg_iv"
+                app:srcCompat="@drawable/ic_baseline_cloud_download_24" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
