--- a/app/src/main/res/layout/image_message_container_left.xml
+++ b/app/src/main/res/layout/image_message_container_left.xml
@@ -75,6 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/image_msg_iv"
                 app:layout_constraintEnd_toEndOf="@+id/image_msg_iv"
                 app:layout_constraintStart_toStartOf="@+id/image_msg_iv"
