Created the fragment_create_reminder_dialog.xml Created the reminder event item

--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -77,6 +77,9 @@
         <action
             android:id="@+id/action_chatFragment_to_imagePreviewFragment"
             app:destination="@id/imagePreviewFragment" />
+        <action
+            android:id="@+id/action_chatFragment_to_createReminderDialog"
+            app:destination="@id/createReminderDialog" />
     </fragment>
 
     <fragment
@@ -179,5 +182,10 @@
         android:name="com.abhishekjagushte.engage.ui.chat.screens.chat.fragments.chatscreen.features.attachment.images.ImagePreviewFragment"
         android:label="fragment_image_preview"
         tools:layout="@layout/fragment_image_preview" />
+    <dialog
+        android:id="@+id/createReminderDialog"
+        android:name="com.abhishekjagushte.engage.ui.chat.screens.events.createscreens.CreateReminderDialog"
+        android:label="fragment_create_reminder_dialog"
+        tools:layout="@layout/fragment_create_reminder_dialog" />
 
 </navigation>
