--- a/app/src/main/res/layout/fragment_event_screen.xml
+++ b/app/src/main/res/layout/fragment_event_screen.xml
@@ -6,5 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.chat.screens.chat.fragments.eventscreen.EventScreenFragment">
 
+    <com.leinardi.android.speeddial.SpeedDialView
+        android:id="@+id/speedDial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="bottom|end"
+        app:sdMainFabOpenedBackgroundColor="@color/red"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:sdMainFabClosedSrc="@drawable/ic_baseline_add_24"
+        app:sdMainFabOpenedSrc="@drawable/ic_baseline_close_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
