--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,44 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal|center_vertical"
         android:orientation="vertical"
-        tools:context=".ui.setup.screens.signup.SignUpFragment">
-
+        android:gravity="center_vertical">
 
         <TextView
+            android:id="@+id/title1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="Proceed With your"
+            android:textSize="22dp"
+            android:textColor="#000"/>
+
+        <TextView
+            android:id="@+id/title2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:text="@string/sign_up_with_engage"
-            android:textSize="24sp" />
+            android:text="Sign Up"
+            android:textStyle="bold"
+            android:textSize="30dp"
+            android:textColor="#000"/>
+
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
-
+            style="@style/OuterEditText">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/EditText"
                 android:hint="@string/email_id"
+
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp">
 
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/OuterEditText">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/EditText"
                 android:hint="@string/password"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -46,18 +54,17 @@
 
         <Button
             android:id="@+id/sign_up_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
+            style="@style/SubmitButton"
+            android:layout_marginTop="20dp"
             android:text="@string/sign_up" />
 
         <TextView
+            android:id="@+id/noteText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:id="@+id/noteText"/>
+            android:layout_marginTop="20dp" />
 
     </LinearLayout>
 
-</layout>
+</LinearLayout>
 
