--- a/app/src/main/res/layout/text_message_container_right.xml
+++ b/app/src/main/res/layout/text_message_container_right.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="message"
             type="com.abhishekjagushte.engage.database.views.MessageView" />
@@ -22,7 +21,7 @@
             android:layout_gravity="end"
             android:layout_marginStart="30dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/right_message_box_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -31,24 +30,19 @@
 
             <TextView
                 android:id="@+id/time_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
+                style = "@style/rightMessageBox"
+                android:textSize="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/message_tv"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/message_tv"
+                app:layout_constraintTop_toBottomOf="@id/message_tv"
                 app:setTimeString="@{message}" />
 
             <TextView
                 android:id="@+id/message_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
+                style = "@style/rightMessageBox"
                 android:text="@{message.data}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
