--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,26 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name = "android:textColor">#000000</item>
+        <item name= "colorPrimary">@color/colorPrimary</item>
+        <item name= "colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name= "colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name= "MessageBox" >
+        <item name = "android:layout_height">wrap_content</item>
+        <item name = "android:layout_width">wrap_content</item>
+        <item name = "fontFamily">Roboto</item>
+        <item name = "android:layout_margin">4dp</item>
+        <item name = "android:paddingLeft">5dp</item>
+        <item name = "android:paddingRight">5dp</item>
+
+    </style>
+
+    <style name= "leftMessageBox" parent="MessageBox">
+        <item name = "android:textColor">#ffffff</item>
+    </style>
+    <style name= "rightMessageBox" parent="MessageBox">
+        <item name = "android:textColor">#000000</item>
+    </style>
 </resources>
