Reminder implemented partially, acknowledgment remaining

--- a/app/src/main/res/layout/fragment_event_screen.xml
+++ b/app/src/main/res/layout/fragment_event_screen.xml
@@ -10,13 +10,22 @@
         android:id="@+id/speedDial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:gravity="bottom|end"
-        app:sdMainFabOpenedBackgroundColor="@color/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:sdMainFabClosedSrc="@drawable/ic_baseline_add_24"
+        app:sdMainFabOpenedBackgroundColor="@color/red"
         app:sdMainFabOpenedSrc="@drawable/ic_baseline_close_24" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/events_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
