--- a/app/src/main/res/layout/fragment_create_reminder_dialog.xml
+++ b/app/src/main/res/layout/fragment_create_reminder_dialog.xml
@@ -22,7 +22,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout"
+            android:id="@+id/reminder_title_textinputlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -33,6 +33,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView3">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/reminder_text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/reminder_title" />
@@ -47,9 +48,10 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
+            app:layout_constraintTop_toBottomOf="@+id/reminder_title_textinputlayout">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/reminder_description_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/reminder_description" />
