--- a/app/src/main/res/layout/fragment_image_view.xml
+++ b/app/src/main/res/layout/fragment_image_view.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.ImageViewFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.github.chrisbanes.photoview.PhotoView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
