--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,12 +4,9 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="red">#BC5D5D</color>
-
     <color name="selected_background">#80B1AC</color>
-
     <color name="secondarycolor">#d0d3d2</color>
-
     <color name="submit_button_text_color">#ffffff</color>
     <color name="transparent">#00000000</color>
-
+    <color name="background_primary">#fafafa</color>
 </resources>
