--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
+            app:menu="@menu/app_bar_options_menu_main"
             android:layout_height="match_parent" />
 
     </com.google.android.material.appbar.AppBarLayout>
