--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,7 +29,7 @@
 
     <style name="EditText">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingLeft">25dp</item>
         <item name="android:background">@drawable/edit_text</item>
         <item name="android:paddingTop">10dp</item>
@@ -38,7 +38,7 @@
 
     <style name="OuterEditText">
         <item name="android:layout_width">300dp</item>
-        <item name="android:layout_height">70dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">7dp</item>
     </style>
 
