--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -39,7 +39,7 @@
     <fragment
         android:id="@+id/peopleFragment"
         android:name="com.abhishekjagushte.engage.ui.main.screens.people.PeopleFragment"
-        android:label="people_fragment"
+        android:label="@string/contacts"
         tools:layout="@layout/fragment_people" >
         <action
             android:id="@+id/action_peopleFragment_to_testFragment"
@@ -229,13 +229,13 @@
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.abhishekjagushte.engage.ui.main.screens.settings.SettingsFragment"
-        android:label="fragment_settings"
+        android:label="Settings"
         tools:layout="@layout/fragment_settings" /><action android:id="@+id/action_global_settingsFragment" app:destination="@id/settingsFragment"/>
 
     <dialog
         android:id="@+id/bottomSheet2"
         android:name="com.abhishekjagushte.engage.ui.fragments.BottomSheet"
         android:label="fragment_bottom_sheet"
-        tools:layout="@layout/fragment_bottom_sheet" /><action android:id="@+id/action_global_bottomSheet2" app:destination="@id/bottomSheet2"/>
+        tools:layout="@layout/fragment_bottom_sheet" /><action android:id="@+id/action_global_bottomSheet2" app:destination="@id/bottomSheet2"/><action android:id="@+id/action_global_profileFragment" app:destination="@id/profileFragment"/>
 
 </navigation>
